crates/analyzer/tests/snapshots/errors__invalid_tx_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: cannot find value `tx` in this scope
  ┌─ compile_errors/invalid_tx_field.fe:4:5
  │
4 │     tx.foo
  │     ^^ undefined


